# CrowdinRegistration

./: .gitignore  crowdin.yml  crowdin.yml.bak  package-lock.json  package.json  pyproject.toml  readme.md
Access8Math/: Access8Math.pot  Access8Math.xliff
BMI/: BMI.pot  BMI.xliff
MSEdgeDiscardAnnouncements/: MSEdgeDiscardAnnouncements.pot  MSEdgeDiscardAnnouncements.xliff
addons/: AudioChart.bg.po  AudioChart.da.po  AudioChart.de.po  AudioChart.es.po  AudioChart.fa.po  AudioChart.fi.po  AudioChart.fr.po  AudioChart.gl.po  AudioChart.hr.po  AudioChart.hu.po  AudioChart.it.po  AudioChart.ja.po  AudioChart.mdwn  AudioChart.pl.po  AudioChart.pt_BR.po  AudioChart.pt_PT.po  AudioChart.ro.po  AudioChart.ru.po  AudioChart.sk.po  AudioChart.sl.po  AudioChart.tr.po  AudioChart.uk.po  AudioChart.zh_CN.po  AudioThemes.bg.po  AudioThemes.da.po  AudioThemes.de.po  AudioThemes.es.po  AudioThemes.fi.po  AudioThemes.fr.po  AudioThemes.gl.po  AudioThemes.hr.po  AudioThemes.hu.po  AudioThemes.it.po  AudioThemes.ka.po  AudioThemes.ko.po  AudioThemes.mdwn  AudioThemes.pl.po  AudioThemes.pt_BR.po  AudioThemes.pt_PT.po  AudioThemes.ro.po  (+2761 more)
af/: clipContentsDesigner.xliff
an/: clipContentsDesigner.xliff
ar/: clipContentsDesigner.po  clipContentsDesigner.xliff
beepKeyboard/: beepKeyboard.pot  beepKeyboard.xliff
bg/: clipContentsDesigner.xliff
bn/: clipContentsDesigner.po  clipContentsDesigner.xliff
bs/: clipContentsDesigner.xliff
ca/: clipContentsDesigner.xliff
charInfo/: charInfo.pot  charInfo.xliff
ckb/: clipContentsDesigner.po
clipContentsDesigner/: clipContentsDesigner.po  clipContentsDesigner.pot  clipContentsDesigner.xliff  nvda.pot  old.pot  old.xliff  readme.pot
clock/: clock.pot  clock.xliff
controlUsageAssistant/: controlUsageAssistant.pot  controlUsageAssistant.xliff
cs/: clipContentsDesigner.xliff
cursorLocator/: cursorLocator.pot  cursorLocator.xliff
customNotifications/: customNotifications.pot  customNotifications.xliff
da/: clipContentsDesigner.po  clipContentsDesigner.xliff
dayOfTheWeek/: dayOfTheWeek.pot  dayOfTheWeek.xliff
de-CH/: clipContentsDesigner.po  clipContentsDesigner.xliff
debugHelper/: debugHelper.pot  debugHelper.xliff
eMule/: eMule.pot  eMule.xliff
easyTableNavigator/: easyTableNavigator.pot  easyTableNavigator.xliff
el/: clipContentsDesigner.xliff
emoticons/: emoticons.md  emoticons.po  emoticons.pot  emoticons.xliff  readme.pot
en/: clipContentsDesigner.po  clipContentsDesigner.xliff
enhancedAnnotations/: enhancedAnnotations.pot  enhancedAnnotations.xliff
enhancedTouchGestures/: enhancedTouchGestures.pot  enhancedTouchGestures.xliff
es-CO/: clipContentsDesigner.po  clipContentsDesigner.xliff
es-ES/: clipContentsDesigner.xliff
evtTracker/: evtTracker.pot  evtTracker.xliff
fa/: clipContentsDesigner.xliff
fi/: clipContentsDesigner.po  clipContentsDesigner.xliff
fr/: clipContentsDesigner.po  clipContentsDesigner.xliff
ga-IE/: clipContentsDesigner.po
goldenCursor/: goldenCursor.pot  goldenCursor.xliff
goldwave/: goldwave.pot  goldwave.xliff
he/: clipContentsDesigner.po
hr/: clipContentsDesigner.po  clipContentsDesigner.xliff
hu/: clipContentsDesigner.po
id/: clipContentsDesigner.po  clipContentsDesigner.xliff
inputLock/: inputLock.pot  inputLock.xliff
instantTranslate/: instantTranslate.pot  instantTranslate.xliff
it/: clipContentsDesigner.xliff
ja/: clipContentsDesigner.po  clipContentsDesigner.xliff
ka/: clipContentsDesigner.po  clipContentsDesigner.xliff
kmr/: clipContentsDesigner.po  clipContentsDesigner.xliff
kn/: clipContentsDesigner.po  clipContentsDesigner.xliff
ko/: clipContentsDesigner.po  clipContentsDesigner.xliff
ky/: clipContentsDesigner.po  clipContentsDesigner.xliff
lt/: clipContentsDesigner.po  clipContentsDesigner.xliff
mk/: clipContentsDesigner.xliff
mn/: clipContentsDesigner.po  clipContentsDesigner.xliff
mp3DirectCut/: mp3DirectCut.pot  mp3DirectCut.xliff
my/: clipContentsDesigner.po  clipContentsDesigner.xliff
nb/: clipContentsDesigner.xliff
ne-NP/: clipContentsDesigner.xliff
nl/: clipContentsDesigner.xliff
nn-NO/: clipContentsDesigner.xliff
numpadNavMode/: numpadNavMode.pot  numpadNavMode.xliff
nvdaDevTestToolbox/: nvdaDevTestToolbox.pot  nvdaDevTestToolbox.xliff
objPad/: objPad.pot  objPad.xliff
objWatcher/: objWatcher.pot  objWatcher.xliff
outlookExtended/: outlookExtended.pot  outlookExtended.xliff
pa-IN/: clipContentsDesigner.po  clipContentsDesigner.xliff
pcKbBrl/: nvda.pot  pcKbBrl.pot  pcKbBrl.xliff  readme.pot
pl/: clipContentsDesigner.xliff
placeMarkers/: placeMarkers.pot  placeMarkers.xliff
proxy/: proxy.pot  proxy.xliff
pt-BR/: clipContentsDesigner.xliff
pt-PT/: clipContentsDesigner.xliff
rdAccess/: rdAccess.pot  rdAccess.xliff
readFeeds/: readFeeds.pot  readFeeds.xliff
readonlyProfiles/: readonlyProfiles.pot  readonlyProfiles.xliff
reportSymbols/: reportSymbols.pot  reportSymbols.xliff
resourceMonitor/: resourceMonitor.pot  resourceMonitor.xliff
reviewCursorCopier/: reviewCursorCopier.pot  reviewCursorCopier.xliff
ro/: clipContentsDesigner.po  clipContentsDesigner.xliff
robEnhancements/: robEnhancements.pot  robEnhancements.xliff
ru/: clipContentsDesigner.xliff
sayCurrentKeyboardLanguage/: sayCurrentKeyboardLanguage.pot  sayCurrentKeyboardLanguage.xliff
sayProductNameAndVersion/: sayProductNameAndVersion.pot  sayProductNameAndVersion.xliff
searchWith/: searchWith.pot  searchWith.xliff
sk/: clipContentsDesigner.po
so/: clipContentsDesigner.xliff
speechLogger/: speechLogger.pot  speechLogger.xliff
sr-CS/: clipContentsDesigner.po  clipContentsDesigner.xliff
stationPlaylist/: stationPlaylist.pot  stationPlaylist.xliff
sv-SE/: clipContentsDesigner.po
systrayList/: systrayList.pot  systrayList.xliff
tonysEnhancements/: tonysEnhancements.pot  tonysEnhancements.xliff
tr/: clipContentsDesigner.po
uk/: clipContentsDesigner.po  clipContentsDesigner.xliff
unicodeBrailleInput/: unicodeBrailleInput.pot  unicodeBrailleInput.xliff
updateChannel/: updateChannel.pot  (+1 more)
(+18022 files in other folders)
