[build-system]
requires = ["setuptools~=80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdinRegistration"
dynamic = ["version"]
description = "crowdinRegistration"
maintainers = [
	{name = "nvdaaddons", email = "nrm1977@gmail.com"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {text = "GPL-3.0"}
dependencies = [
	"nh3==0.3.2",
	# Building user documentation and the l10nUtil
	"Markdown==3.10",
	"lxml==6.0.2",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
	"l2m4m==1.0.4",
	"pymdown-extensions==10.17.1",
]

[project.urls]
Repository = "https://github.com/crowdinRegistration.git"

[tool.setuptools.packages.find]
exclude = ["l10n*", "shared*"]

[tool.ruff]
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"l10n",
	"shared",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]
logger-objects = ["logHandler.log"]

[tool.pyright]
venvPath = ".venv"
venv = "."
pythonPlatform = "Windows"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
]

# Tell pyright where to load python code from
extraPaths = [
	"./github/workflows",
]

# General config
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true

# Stricter typing
strictParameterNoneValue = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# Compliant rules
reportAssertAlwaysTrue = true
reportAssertTypeFailure = true
reportDuplicateImport = true
reportIncompleteStub = true
reportInconsistentOverload = true
reportInconsistentConstructor = true
reportInvalidStringEscapeSequence = true
reportInvalidStubStatement = true
reportInvalidTypeVarUse = true
reportMatchNotExhaustive = true
reportMissingModuleSource = true
reportMissingImports = true
reportNoOverloadImplementation = true
reportOptionalContextManager = true
reportOverlappingOverload = true
reportPrivateImportUsage = true
reportPropertyTypeMismatch = true
reportSelfClsParameterName = true
reportTypeCommentUsage = true
reportTypedDictNotRequiredAccess = true
reportUndefinedVariable = true
reportUnusedExpression = true
reportUnboundVariable = true
reportUnhashable = true
reportUnnecessaryCast = true
reportUnnecessaryContains = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedClass = true
reportUnusedCoroutine = true
reportUnusedExcept = true

# Should switch to true when possible
reportDeprecated = false  # 1834 errors

# Can be enabled by generating type stubs for modules via pyright CLI
reportMissingTypeStubs = false

# Bad rules
# These are roughly sorted by compliance to make it easier for devs to focus on enabling them.
# Errors were last checked Feb 2025.
# 1-50 errors
reportUnsupportedDunderAll = false  # 2 errors
reportAbstractUsage = false  # 3 errors
reportUntypedBaseClass = false  # 4 errors
reportOptionalIterable = false  # 5 errors
reportCallInDefaultInitializer = false  # 6 errors
reportInvalidTypeArguments = false  # 7 errors
reportUntypedNamedTuple = false  # 11 errors
reportRedeclaration = false  # 12 errors
reportOptionalCall = false  # 16 errors
reportConstantRedefinition = false  # 18 errors
reportWildcardImportFromLibrary = false  # 26 errors
reportIncompatibleVariableOverride = false  # 28 errors
reportInvalidTypeForm = false  # 38 errors


# 50-100 errors
reportGeneralTypeIssues = false  # 53 errors
reportOptionalOperand = false  # 59 errors
reportUnnecessaryComparison = false  # 67 errors
reportFunctionMemberAccess = false  # 80 errors
reportUnnecessaryIsInstance = false  # 88 errors
reportUnusedFunction = false  # 97 errors
reportImportCycles = false  # 99 errors
reportUnusedImport = false  # 113 errors
reportUnusedVariable = false  # 147 errors

# 100-1000 errors
reportOperatorIssue = false  # 102 errors
reportAssignmentType = false  # 103 errors
reportReturnType = false  # 104 errors
reportPossiblyUnboundVariable = false  # 126 errors
reportMissingSuperCall = false  # 159 errors
reportUninitializedInstanceVariable = false  # 179 errors
reportUnknownLambdaType = false  # 196 errors
reportMissingTypeArgument = false  # 204 errors
reportImplicitStringConcatenation = false  # 300+ errors
reportIncompatibleMethodOverride = false  # 300+ errors
reportPrivateUsage = false  # 900+ errors

# 1000+ errors
reportUnusedCallResult = false  # 1000+ errors
reportOptionalSubscript = false  # 1000+ errors, mostly failing to recognize config setter/getter
reportCallIssue = false  # 1000+ errors, mostly failing to recognize config setter/getter
reportOptionalMemberAccess = false  # 1683 errors
reportImplicitOverride = false  # 2000+ errors
reportIndexIssue = false  # 2000+ errors, mostly failing to recognize config setter/getter
reportAttributeAccessIssue = false  # 2000+ errors
reportArgumentType = false  # 2000+ errors
reportUnknownParameterType = false  # 4000+ errors
reportMissingParameterType = false  # 4000+ errors
reportUnknownVariableType = false  # 6000+ errors
reportUnknownArgumentType = false  # 6000+ errors
reportUnknownMemberType = false  # 20000+ errors

[tool.uv]
default-groups = "all"
python-preference = "only-system"
environments = ["sys_platform == 'win32'"]
required-version = ">=0.9"

[dependency-groups]
dev = [
	"setuptools~=80.10.2",
	"uv==0.10.6",
]
lint = [
	"ruff==0.15.4",
	"pre-commit==4.2.0",
	"pyright[nodejs]==1.1.407",
]

